added youtube-player and favorites component, and added routing to move between views added some input validation for latitude/longitude (location) and location radius fields added comments for better readability added some improved styling

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
-  padding: 25px;
-  font: 12px Arial, Helvetica, sans-serif;
+  font: .8em Arial, Helvetica, sans-serif;
 }
 
 #error {
@@ -14,4 +13,3 @@ body {
 .right {
   float:right;
 }
-
