added some additional global styles added some style to navigational elements populated youtube-player component with various video info added getVideoInfo and getVideoComments to youtube-search service for use by youtube-player component updated most comparisons to use the strict comparison operator (===) instead of the loose comparison operator (==) for improved efficiency updated styling on youtube-search component improved youtube-search component by adding a 'working...' element to indicate when a search is in progress

--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,22 @@ body {
 .right {
   float:right;
 }
+
+.pre {
+  white-space: pre;
+}
+
+a:hover {
+  cursor: pointer;
+}
+
+dt {
+  float:left;
+  margin: 0 10px 5px 0;
+  text-align: right;
+  width:80px;
+}
+
+dd {
+  margin: 0 0 10px 0px;
+}
