--- a/src/app.css
+++ b/src/app.css
@@ -7,3 +7,22 @@ h1 > a {
   text-decoration:none;
   color:white;
 }
+
+nav a {
+  padding: 5px 10px;
+  text-decoration: none;
+  margin-top: 10px;
+  display: inline-block;
+  background-color: #EEE;
+}
+nav a:visited, a:link {
+  color: #607D8B;
+}
+nav a:hover {
+  color: #039be5;
+  background-color: #FD8DC;
+}
+nav a.router-link-active {
+  color: #FFF;
+  background: #999;
+}
