--- a/src/youtube-player/youtube-player.component.css
+++ b/src/youtube-player/youtube-player.component.css
@@ -1,49 +1,81 @@
-/*
-.modal {
-	position: fixed;
-	font-family: Arial, Helvetica, sans-serif;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	background: rgba(0,0,0,0.8);
-	z-index: 99999;
-	opacity:0;
-	-webkit-transition: opacity 400ms ease-in;
-	-moz-transition: opacity 400ms ease-in;
-	transition: opacity 400ms ease-in;
-	pointer-events: none;
-}
-.modal .close {
-	background: #606061;
-	color: #FFFFFF;
-	line-height: 25px;
-	position: absolute;
-	right: 0px;
-	text-align: center;
-	top: 0px;
-	width: 24px;
-	text-decoration: none;
-	font-weight: bold;
-}
-.modal .close:hover
-{ 
-    background: #00d9ff; 
-    text-decoration:none;
+.error {
+  background: rgba(0,0,0,0);
+  border:0px;
+  padding-top:2em;
+  color:red;
 }
 
-.modal:target {
-	opacity:1;
-	pointer-events: auto;
+/* Set player width to 100%, while maintaining aspect ratio */
+#player {
+  width:100%;
+  position: relative;
+  padding-bottom: 51%;
 }
-.modal > div {
-	width: 80%;
-  height:60%
-	position: relative;
-	margin: 20% auto;
-	border-radius: 4px;
-	background: #f0f0f0;
-	padding: 0px 0px 10px 0px;
-  overflow: scroll;
+
+#player > iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
-*/
+
+#player-nav {
+  width: 100%;
+  padding: 3px;
+  font-size: 16px;
+  font-weight: bold;
+  position: fixed;
+  height: 20px;
+  bottom: 0;
+  left: 0;
+  background: rgba(240,240,240,100);
+}
+
+/* Title */
+h3 {
+  text-decoration: underline;
+}
+
+/* Detail section */
+h4 {
+  background: lightgray;
+  padding: 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+h4.detail_active {
+  background: #444;
+  color: white;
+}
+
+h4 + div {
+  display: none;
+  opacity: 0;
+  transition: all 1s ease-in;
+}
+h4 + div.detail_active {
+  display: block;
+  opacity: 1;
+  transition: all 1s ease-in;
+  padding-bottom: 10px;
+}
+
+/* Tags */
+span.tag {
+  background: lightblue;
+  margin: 5px;
+  padding: 3px;
+  display: inline-block;
+  border-radius: 4px;
+}
+
+.fav, .nofav {
+  width:20px;
+  height: 20px;
+  border: 1px solid;
+}
+.fav {
+  background: yellow;
+}
+.nofav {
+  background: auto;
+}
