--- a/src/youtube-search/youtube-search.component.css
+++ b/src/youtube-search/youtube-search.component.css
@@ -37,6 +37,9 @@
   border: 1px solid;
   padding: 5px;
 }
+.search-params dt {
+  float:left;
+}
 .search-params .success {
   color: green;
 }
@@ -49,6 +52,7 @@ input.error {
   padding-top:2em;
 }
 .status {
+    margin-top: 10px;
     padding: 20px;
     text-align: center;
     border: 1px solid;
@@ -56,9 +60,14 @@ input.error {
 
 #search-nav {
   width:100%;
-  padding:5px;
+  padding:3px;
   font-size: 16px;
   font-weight: bold;
+  position:fixed;
+  height:20px;
+  bottom:0;
+  left:0;
+  background:rgba(240,240,240,100);
 }
 
 a#search-prev, a#search-next { 
