improved styling of Comments section of youtube-player component and updated to include user profile image and timestamp for each top level comment created a custom Angular 2 timestamp pipe for displaying time in comments implemented Favorite checkbox in youtube-player, which saves pushes a YouTubeSearchResult object onto an array stored in window.localStorage['faves'] implemented the Favorites view to list all YouTubeSearchResult objects as it does in the Search view trimmed out some parameters that are not used in YouTubeSearchResult (i.e. etag, thumbnail width and height) *TODO* create a new component to handle listing on both views in order to eliminate duplicate code *TODO* slim down faves in localStorage by storing just the videoId parameters--the YouTube API supports a comma-separated list of video IDs, so we won't have to store as much data in browser storage

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .pre {
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 a:hover {
@@ -31,4 +31,47 @@ dt {
 
 dd {
   margin: 0 0 10px 0px;
+}
+
+
+.video-list {
+  margin: 0 0 2em 0;
+  list-style-type: none;
+  padding: 0;
+  width: 100%;
+}
+.video-list li {
+  cursor: pointer;
+  left: 0;
+  background-color: #DDD;
+  margin: .5em;
+  padding: .3em;
+  border-radius: 4px;
+  min-height: 80px;
+}
+.video-list li.selected:hover {
+  background-color: #BBD8DC !important;
+}
+.video-list li:hover {
+  background-color: #EEE;
+}
+.video-list .selected {
+  background-color: #CFD8DC !important;
+  color: white;
+}
+.video-list img.thumbnail {
+  position:absolute;
+  width: 110px;
+  border-radius: 2px;
+  padding:4px;
+}
+.video-list div.info {
+  margin-left: 120px;
+  margin-top: -10px;
+}
+.status {
+    margin-top: 10px;
+    padding: 20px;
+    text-align: center;
+    border: 1px solid;
 }
