renamed youtube-player component (YouTubePlayerComponent) to youtube-detail (YouTubeDetailComponent) moved my-timstamp.pipe to a new directory /src/custom-pipes/ moved /src/youtube-search/youtube-search-result.ts to a new /src/common/ directory and renamed to interfaces.ts and made many of the fields optional added a new YouTubeSearchParameters interface to /src/common/interfaces.ts updated styling throughout--main navigational tabs, validators, footer nav, etc. promoted footer nav styling to global stylesheet created a new Constants class to hold various constants used in the application to provide a central place to configure the application improved the display of comments and video descriptions by setting innerHTML instead of innerText moved much of the post-search processing from the YouTubeSearchService into YouTubeSearchComponent for greater flexibility of search service moved page token update in search component to a .then() after the response has been successfully processed **TODO add error handling **TODO slim down faves in local storage to just videoId--perform query with comma-separated list in FavoritesComponent to get snippets **TODO type check YouTube API parameters

--- a/src/youtube-detail/youtube-detail.component.html
+++ b/src/youtube-detail/youtube-detail.component.html
@@ -1,5 +1,6 @@
 <div>
-  <div>
+  <div class="error">{{errorMessage}}</div>
+  <div class="details">
     <div id="player">
       <iframe src="//www.youtube.com/embed/{{videoId}}" frameborder="0" allowfullscreen></iframe>
     </div>
@@ -50,6 +51,7 @@
     
     <h4 [class.detail_active]="detailView === 'comments'" (click)="onSelect('comments')">Comments</h4>
     <div id="comments" [class.detail_active]="detailView === 'comments'">
+      <div class="status" *ngIf="comments?.length === 0">No comments</div>
       <div class="comment" *ngFor="#c of comments">
         <div class="timestamp">
         {{c.snippet?.topLevelComment?.snippet?.publishedAt | mytimestamp}}
@@ -58,13 +60,14 @@
           <img class="left" src="{{c.snippet?.topLevelComment?.snippet?.authorProfileImageUrl}}">
           {{c.snippet?.topLevelComment?.snippet?.authorDisplayName}}
         </strong><br>
-        {{ c.snippet?.topLevelComment?.snippet?.textDisplay }}
+        <span class="text pre" [innerHTML]="c.snippet?.topLevelComment?.snippet?.textDisplay"></span>
         <br>
       </div>
     </div>
   </div>
-  <div class="error">{{errorMessage}}</div>
-  <div id="player-nav">
-    <a (click)="back()">Back to Search Results</a>
-  </div>
 </div>
+<footer>
+  <div class="nav">
+    <a id="back" (click)="back()">&#x21b6; Back to Search Results</a>
+  </div>
+</footer>
