--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
+/** Global Styles **/
+
 body {
   font: .8em Arial, Helvetica, sans-serif;
 }
 
-#error {
+.error {
   color:red;
+  font-weight:bold;
 }
 
 .left {
@@ -26,11 +29,12 @@ dt {
   float:left;
   margin: 0 10px 5px 0;
   text-align: right;
-  width:80px;
+  width:100px;
 }
 
 dd {
   margin: 0 0 10px 0px;
+  display: table;
 }
 
 
@@ -69,9 +73,36 @@ dd {
   margin-left: 120px;
   margin-top: -10px;
 }
+
+
 .status {
     margin-top: 10px;
     padding: 20px;
     text-align: center;
     border: 1px solid;
+}
+
+
+footer .nav {
+  width:100%;
+  padding:3px;
+  font-size: 16px;
+  font-weight: bold;
+  position:fixed;
+  height:20px;
+  bottom:0;
+  left:0;
+  background: rgba(240,240,240,0.8);
+  border-top: 1px solid;
+}
+
+footer .nav #back, footer .nav #forward { 
+  cursor:pointer;
+}
+footer .nav #back:hover, footer .nav #forward:hover {
+  color: #777;
+}
+footer .nav #forward {
+  float:right;
+  padding-right:15px;
 }
