--- a/src/app.css
+++ b/src/app.css
@@ -8,12 +8,17 @@ h1 > a {
   color:white;
 }
 
+nav {
+  border-bottom: 1px solid gray;
+}
+
 nav a {
   padding: 5px 10px;
   text-decoration: none;
   margin-top: 10px;
   display: inline-block;
   background-color: #EEE;
+  border-radius: 4px 4px 0px 0px;
 }
 nav a:visited, a:link {
   color: #607D8B;
