--- a/src/favorites/favorites.component.html
+++ b/src/favorites/favorites.component.html
@@ -1,6 +1,4 @@
 <h2>Favorites</h2>
-<a (click)="clear()">Clear Favorites</a>
-<br>
 <div class="status" *ngIf="faves?.length === 0">You have not saved any favorites</div>
 <ul class="video-list">
   <li *ngFor="#fav of faves"
@@ -9,7 +7,8 @@
     <img src="{{fav.thumbnails?.medium?.url}}" class="thumbnail">
     <div class="info">
       <h4>{{fav.title}}</h4>
-      <span class="description">{{fav.description}}</span>
+      <span class="description pre" [innerHTML]="fav.description"></span>
     </div>
   </li>
 </ul>
+<small><a *ngIf="faves?.length !== 0" (click)="clear()">Clear Favorites</a></small>
