--- a/src/youtube-search/youtube-search.component.css
+++ b/src/youtube-search/youtube-search.component.css
@@ -1,4 +1,5 @@
 .search-params {
+  min-width: 470px;
   border: 1px solid;
   padding: 5px;
 }
@@ -7,9 +8,11 @@
 }
 .search-params .success {
   color: green;
+  padding-left: 4px;
 }
 .search-params .error {
   color: red;
+  padding-left: 4px;
 }
 input.error {
   background: rgba(0,0,0,0);
@@ -17,24 +20,3 @@ input.error {
   padding-top:2em;
 }
 
-#search-nav {
-  width:100%;
-  padding:3px;
-  font-size: 16px;
-  font-weight: bold;
-  position:fixed;
-  height:20px;
-  bottom:0;
-  left:0;
-  background:rgba(240,240,240,100);
-}
-
-a#search-prev, a#search-next { 
-  cursor:pointer;
-}
-a#search-prev:hover, a#search-next:hover {
-  color: #777;
-}
-a#search-next {
-  float:right;
-}
