incremented version from 0.0.1 to 0.1.0 updated index.html with Prod/Debug modes, and included locations for locally-hosted libraries added optional parameters to YouTubeSearchParameters interface added YouTubeVideoListParameters and YouTubeCommentThreadListParameters interfaces for strict typing of request parameters added constants VIDEO_LIST_MAX_RESULTS and COMMENT_LIST_MAX_RESULTS added some indicators to FavoritesComponent and YouTubeDetailComponent to show when we are still waiting on a response to a request simplified the faves variable stored in window.localstorage, to store only an array of videoIds represented as strings updated the FavoritesComponent to perform an API query to retrieve additional information about the favorited videos modified searches so results are processed by the component rather than in the service--this provides for more flexibility in the service and allows the component to handle errors **TODO create a new list component to share between YouTubeSearchComponent and FavoritesComponent? **TODO add error handling

--- a/src/favorites/favorites.component.html
+++ b/src/favorites/favorites.component.html
@@ -1,13 +1,15 @@
 <h2>Favorites</h2>
-<div class="status" *ngIf="faves?.length === 0">You have not saved any favorites</div>
+<div class="status" *ngIf="!working && faves?.length === 0">You have not saved any favorites</div>
+<!-- check videos.length to force change detection of the 'working' variable -->
+<div class="status" *ngIf="working && videos?.length === 0">Searching...</div>
 <ul class="video-list">
-  <li *ngFor="#fav of faves"
-    [class.selected]="fav === selectedVideo"
-    (click)="onSelect(fav)">
-    <img src="{{fav.thumbnails?.medium?.url}}" class="thumbnail">
+  <li *ngFor="#video of videos"
+    [class.selected]="video === selectedVideo"
+    (click)="onSelect(video)">
+    <img src="{{video.thumbnails.medium.url}}" class="thumbnail">
     <div class="info">
-      <h4>{{fav.title}}</h4>
-      <span class="description pre" [innerHTML]="fav.description"></span>
+      <h4>{{video.title}}</h4>
+      <span class="description pre" [innerHTML]="video.description"></span>
     </div>
   </li>
 </ul>
