consolidated request execution in youtube-search.service into a single execute() function added error handling (i.e. reject() functions) to Promises added checks in youtube-search.service to verify that the YouTube API is loaded, rejecting with an appropriate error if it is not added DEBUG mode constant to Constants class to enable/disable additional logging cleaned up code, removing extraneous stuff, etc., and added comments throughout

--- a/src/favorites/favorites.component.html
+++ b/src/favorites/favorites.component.html
@@ -1,7 +1,8 @@
 <h2>Favorites</h2>
+<div class="error">{{errorMessage}}</div>
 <div class="status" *ngIf="!working && faves?.length === 0">You have not saved any favorites</div>
 <!-- check videos.length to force change detection of the 'working' variable -->
-<div class="status" *ngIf="working && videos?.length === 0">Searching...</div>
+<div class="status" *ngIf="working && videos?.length === 0">Retrieving...</div>
 <ul class="video-list">
   <li *ngFor="#video of videos"
     [class.selected]="video === selectedVideo"
