--- a/src/youtube-detail/youtube-detail.component.html
+++ b/src/youtube-detail/youtube-detail.component.html
@@ -75,6 +75,6 @@
 </div>
 <footer>
   <div class="nav">
-    <a id="back" (click)="back()">&#x21b6; Back to Search Results</a>
+    <a id="back" (click)="back()">&#x21b6; Back</a>
   </div>
 </footer>
