--- a/src/favorites/favorites.component.html
+++ b/src/favorites/favorites.component.html
@@ -7,6 +7,7 @@
   <li *ngFor="#video of videos"
     [class.selected]="video === selectedVideo"
     (click)="onSelect(video)">
+    <a class="right ztop" title="Remove from Favorites" (click)="removeFavorite(video.videoId);$event.stopPropagation()">&#x2716;</a>
     <img src="{{video.thumbnails.medium.url}}" class="thumbnail">
     <div class="info">
       <h4>{{video.title}}</h4>
