--- a/src/youtube-search/youtube-search.component.html
+++ b/src/youtube-search/youtube-search.component.html
@@ -44,9 +44,14 @@
   <li *ngFor="#video of videos"
     [class.selected]="video === selectedVideo"
     (click)="onSelect(video)">
-    <img src="{{video.thumbnails.medium.url}}" class="thumbnail">
+    <div class="thumbnail">
+      <img src="{{video.thumbnails.medium.url}}">
+    </div>
+    <small></small>
     <div class="info">
       <h4>{{video.title}}</h4>
+      <small>{{video.channelTitle}}</small>
+      <br><br>
       <span class="description pre" [innerHTML]="video.description"></span>
     </div>
   </li>
